# lume-ace3p

./: .gitignore  .readthedocs.yaml  README.md  gitignore  parse_s3p_param_sweep.py  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.md  installation.md  optimization.md  parameter_sweep.md  plotting.md  requirements.txt  troubleshooting.md  workflow_inputs.md  yaml_reference.md
examples/: MOBO_ExpectedHypervolume_Example.yaml  UCB_Example.yaml  bend-90degree.jou  bend-90degree.s3p  bend-90degree_mf.jou  bend-90degree_mf.s3p  demo_omega3p_ace3p_param_sweep.yaml  demo_omega3p_sweep.yaml  demo_s3p_mf_optimization.yaml  demo_s3p_optimization.yaml  demo_s3p_optimization_MF.yaml  demo_s3p_sweep.yaml  demo_s3p_sweep_no_s3p_file.yaml  demo_track3p_particle_weight.yaml  lf_param_sweep.yaml  lume-ace3p_omega3p_psweep.py  lume-ace3p_omega3p_xopt.py  lume-ace3p_psweep_demo.py  lume-ace3p_s3p.yaml  lume-ace3p_s3p_psweep.py  lume-ace3p_s3p_sweep.py  lume-ace3p_simple_psweep.py  lume-ace3p_xopt_demo.py  lume_ace3p_psweep_demo.py  lume_ace3p_xopt_demo.py  pillbox-rtop.jou  pillbox-rtop.omega3p  pillbox-rtop.rfpost  reload_xopt_model.py  run_lume-ace3p_omega3p_sweep_perlmutter.batch  run_lume-ace3p_omega3p_sweep_s3df.batch  run_lume-ace3p_psweep_Perlmutter.batch  run_lume-ace3p_psweep_S3DF.batch  run_lume-ace3p_psweep_perlmutter.batch  run_lume-ace3p_psweep_s3df.batch  run_lume-ace3p_s3p_mf_optimization_perlmutter.batch  run_lume-ace3p_s3p_optimization_perlmutter.batch  run_lume-ace3p_s3p_optimization_s3df.batch  run_lume-ace3p_s3p_optimization_s3df_MF.batch  (+9 more)
(+73 files in other folders)
